# fullerenes

./: CMakeLists.txt
include/fullerenes/: auxiliary.hh  buckygen-wrapper.hh  spiral.hh
src/c++/: CMakeLists.txt  unfold.cc
src/contrib/: buckygen-wrapper.cc
src/contrib/buckygen-1.0/: buckygen.c
src/cuda/: CMakeLists.txt
